--- a/webapi/server/Altic_Shaw_Net6_Api/Altic_Shaw_Net6_Api/Altic_Shaw_Net6_Api.csproj
+++ b/webapi/server/Altic_Shaw_Net6_Api/Altic_Shaw_Net6_Api/Altic_Shaw_Net6_Api.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Repositories\NewFolder\**" />
+    <Content Remove="Repositories\NewFolder\**" />
+    <EmbeddedResource Remove="Repositories\NewFolder\**" />
+    <None Remove="Repositories\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Controllers\UsersController.cs" />
   </ItemGroup>
 
